fixed styling issues on safari mobile

--- a/src/style.css
+++ b/src/style.css
@@ -234,22 +234,11 @@ a:hover, a:visited, a:link, a:active
     }
 
     .arrow-left {
-        width: 0;
-        height: 0;
-        border-top: 10px solid transparent;
-        border-bottom: 10px solid transparent;
-        border-left: none;
-        margin-left: 0px;
-    
+        display:none;
     }
 
     .arrow-right{
-        width: 0;
-        height: 0;
-        border-top: 10px solid transparent;
-        border-bottom: 10px solid transparent;
-        border-right: none;
-        margin-right: 0px;
+        display: none;
     }
 
 
